<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cl_dialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_item_dialog_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/DIALOG_NAME"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_item_dialog_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_item_dialog_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/DIALOG_DESCRIPTION"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_item_dialog_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_item_dialog_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_item_dialog_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/DIALOG_PRICE"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_item_dialog_description">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_item_dialog_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_item_dialog_category_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DIALOG_CATEGORY"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/til_item_dialog_price"
        app:layout_constraintTop_toBottomOf="@+id/til_item_dialog_price"
        android:paddingTop="8dp"
        android:paddingStart="16dp"
        android:paddingEnd="0dp"/>

    <Spinner
        android:id="@+id/sp_item_dialog_category_picker"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/spinner_background"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_item_dialog_category_label" />

    <CheckBox
        android:id="@+id/cb_item_dialog_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/DIALOG_STATUS"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sp_item_dialog_category_picker" />
</androidx.constraintlayout.widget.ConstraintLayout>