<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cl_item_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="8dp"
    android:paddingBottom="8dp">

    <ImageView
        android:id="@+id/iv_item_category_icon"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_item_edit"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_item_name"
        app:srcCompat="@drawable/ic_launcher_background" />

    <TextView
        android:id="@+id/tv_item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/LIST_PLACEHOLDER_NAME"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_item_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/LIST_PLACEHOLDER_PRICE"
        android:textColor="#14C514"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/tv_item_name"
        app:layout_constraintTop_toTopOf="@+id/tv_item_name" />

    <TextView
        android:id="@+id/tv_item_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/LIST_PLACEHOLDER_DESCRIPTION"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/tv_item_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_item_name" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/cb_item_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:scaleX="2"
        android:scaleY="2"
        app:layout_constraintBottom_toBottomOf="@+id/btn_item_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_item_category_icon" />

    <Button
        android:id="@+id/btn_item_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/LIST_ITEM_BUTTON_EDIT"
        app:layout_constraintStart_toStartOf="@+id/tv_item_description"
        app:layout_constraintTop_toBottomOf="@+id/tv_item_description" />

    <Button
        android:id="@+id/btn_item_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:backgroundTint="#CC0000"
        android:text="@string/LIST_ITEM_BUTTON_DELETE"
        app:layout_constraintStart_toEndOf="@+id/btn_item_edit"
        app:layout_constraintTop_toTopOf="@+id/btn_item_edit" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <ImageView
        android:id="@+id/iv_currency_icon"
        android:layout_width="36dp"
        android:layout_height="0dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_item_price"
        app:layout_constraintStart_toEndOf="@+id/tv_item_price"
        app:layout_constraintTop_toTopOf="@+id/tv_item_price"
        app:srcCompat="@drawable/money_24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>